# raytracing-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  yacpm.json
lib/stb/: CMakeLists.txt
src/: main.cpp  material.cpp  material.h  object.cpp  object.h  scene.cpp  scene.h  util.cpp  util.h
